Made default flag length (30d by default)